--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-hacker
+show_downloads: "true"
+description: [Jupyter notebooks that use TensorFlow to understand and visualize neural networks with applications in the Raspberry Pi]
