--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
 theme: jekyll-theme-hacker
-description: [Jupyter notebooks that use TensorFlow to understand and visualize neural networks with applications in the Raspberry Pi]
+description: [Introduction to molecular dynamics and pymol]
